# mu-brand

./: .dockerignore  .env.example  .gitignore  .secrets.local.example  BUDGET.md  CLAUDE.md  Dockerfile.mu-craft  LICENSE  NOUNS_PROPOSAL.md  PSYCHOLOGY.md  README.md  ROADMAP.md  cron.sh  fly.mu-craft.toml  generate.py  generate_lifestyle.py  generate_nouns.py  jiuflow_images.py  kokon_images.py  kokon_images_v3.py  mu_craft.py  pytest.ini  reprice.py  requirements.txt  retry_mockups.py  sweep_images.py  twitter_post.py  verify.py
mu-cli/: README.md  pyproject.toml
mu-cli/mu_cli/: __init__.py  batch.py  client.py  drop.py
store/: .dockerignore  Cargo.toml  Dockerfile  docker-entrypoint.sh  fly.toml  newsletter_001.html
store/data/memory-vault/: MEMORY.md  bim_house_vision.md  bonding_ai.md  chatweb_features.md  feedback_cap_table_source_of_truth.md  feedback_company_name.md  feedback_customer_wording.md  feedback_gemini_key_env.md  feedback_heavy_tasks_m5.md  feedback_image_deploy_check.md  feedback_jiuflow_canonical_com.md  feedback_jiuflow_device.md  feedback_jiuflow_english.md  feedback_jiuflow_hero_cta.md  feedback_jiuflow_no_web.md  feedback_koe_build.md  feedback_koe_mac.md  feedback_koe_oww.md  feedback_line_send.md  feedback_radio_systemd.md  feedback_siiieep_kokon.md  feedback_soluna_naming.md  feedback_verify_external_facts.md  gelato_api.md  google_ads_jiuflow.md  index.html  ios_build_deploy.md  jf_certification.md  jiuflow_android_twa.md  jiuflow_app.md  jiuflow_booking.md  jiuflow_iap.md  kagi_app.md  koe_device.md  koe_project.md  kokon_tokyo.md  lessons_learned.md  m5_setup.md  mu_collab_b2b.md  mu_profit_split_28.md  (+23 more)
store/migrations/: 20260523_5_brands_and_config.sql  20260523b_3_more_brands.sql  20260523c_v3_5_brands.sql  20260609_1_work_unbox.sql  atsume_seed.sql  catalog_seed.sql  elepote_seed.sql  halo_seed.sql  manufacturing_seed.sql  mugon_seed.sql  muon_seed.sql  roll_seed.sql  shiopixel_seed.sql  yuma_seed.sql
store/partner_specs/: amami.json  asoview.json  atsume.json  bjjsh.json  bjjtokyo.json  blank.json  charfilm.json  ele.json  elsoul.json  jiufight.json  newt.json  notahotel.json  rashguard.json  reversal.json  ryozo.json
store/scripts/: build_memory_vault.py  dump_catalog_seed.py  gen_atsume_dev_mascot.py  gen_elepote_chars.py  gen_elepote_products.py  gen_elepote_sleep.py  gen_itto_images.py  gen_kokon_goods.py  gen_kokon_lineup.py  gen_roll_designs.py  gen_x_images.py  gen_yuma_designs.py  gen_yuma_more.py  gen_yuma_prints.py  gen_yuma_products.py  gen_yuma_r2.py  seed_marker_zero_catalog.py
store/src/: agent_api.rs  build_i18n.json  catalog.rs  consign.rs  creators.rs  gemini.rs  ito.rs  jiufight_tokens.rs  labs_kokon_aori_claude_holder.html  main.rs  manufacturing_req.rs  manufacturing_schema.rs  nft.rs  nouns.rs  payments.rs  rfq.rs  spec.rs  tests_agent.rs  tests_critical.rs  work.rs
store/static/: 404.html  NOUNS_PROPOSAL.md  about-honest.html  about.html  admin-bids.html  admin-collabs.html  admin-costs.html  admin-create.html  admin-db.html  admin-gelato.html  admin-news.html  admin-pod.html  admin-products.html  amami-en.html  amami.html  baba.html  bounty.html  brand.html  buy-event.html  buy-founder.html  buy-today.html  buy-yours.html  buy.html  city.html  collab-chat-gate.html  collab-chat.html  collab.html  constitution.html  constitution.md  constitution_blame.json  council.html  developers.html  donations.md  embed.js  exit-funnel.js  faq.html  fest-console.html  fest-sync.html  fest.html  flow_now.en.html  (+53 more)
store/static/admin/: brands.html  products.html
store/static/aloha/: index.html
store/static/amami/: .gitkeep
store/static/analog/: index.html
store/static/anime/: index.html
store/static/atsume/: index.html
store/static/atsume-group/: index.html
store/static/biruwa/: index.html
store/static/bjj/: about.html  index.html  rashguard.html  tee-black.html  tee-white.html  tee.html
store/static/blast/: buyer_thanks_body.html  buyer_thanks_body.txt  buyer_thanks_subject.txt
store/static/blog/: 100-in-20-days-strategy.md  4-7-founder-relay-001.html  60-days-7-buyers.md  all-in-on-mu.md  elon-cron-with-fur.html  fabric-shift.md  field-log-001.html  index.html  (+5 more)
store/tests/: integration.rs
(+705 files in other folders)
