[package]
name = "mu-store"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mu-store"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rust-s3 = { version = "0.34", default-features = false, features = ["tokio-rustls-tls"] }
urlencoding = "2.1"
# Safe Markdown → HTML for auto-blog. Strips script tags + javascript: URLs.
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
ammonia = "4"
